# cricket-drs-system

./: .gitignore  README.md
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/mobile-app/: README.md  pubspec.yaml
apps/mobile-app/lib/: main.dart
apps/mobile-app/test/: widget_test.dart
apps/umpire-console/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
apps/umpire-console/src/: App.tsx
apps/web-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/web-app/src/: App.tsx
docs/: architecture.md  design.md  phases.md  prd.md  rules.md
docs/adr/: 0001-go-for-core-services.md  0002-cto-review-findings.md  0003-gopro-hardware.md  0004-shared-observability-package.md  0005-camera-calibration-language-split.md  0006-time-sync-language-split.md  template.md
edge-agent/: README.md  go.mod
edge-agent/cmd/: main.go
edge-agent/internal/: doc.go
infra/: README.md
infra/k8s/: README.md
infra/k8s/base/: namespace.yaml
infra/terraform/: README.md  backend.tf  main.tf  providers.tf  variables.tf
infra/terraform/bootstrap/: main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/modules/cluster/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/storage/: main.tf  outputs.tf  variables.tf
ml-pipeline/: README.md  pyproject.toml
ml-pipeline/ball-tracking/: README.md
ml-pipeline/ball-tracking/tests/: test_placeholder.py
ml-pipeline/camera-calibration/: README.md
ml-pipeline/camera-calibration/camera_calibration/: __init__.py  extrinsic.py  pitch_geometry.py
ml-pipeline/camera-calibration/tests/: test_extrinsic.py  test_pitch_geometry.py
ml-pipeline/edge-detection/: README.md
ml-pipeline/edge-detection/tests/: test_placeholder.py
ml-pipeline/lbw-engine/: README.md
ml-pipeline/lbw-engine/tests/: test_placeholder.py
ml-pipeline/model-registry/: README.md
ml-pipeline/model-registry/tests/: test_placeholder.py
ml-pipeline/runout-detection/: README.md
ml-pipeline/runout-detection/tests/: test_placeholder.py
ml-pipeline/time-sync/: README.md
ml-pipeline/time-sync/tests/: test_audio_correlation.py
ml-pipeline/time-sync/time_sync/: __init__.py  audio_correlation.py
services/: README.md  go.mod  go.sum
services/analytics-reporting/: README.md  openapi.yaml
services/analytics-reporting/cmd/: main.go
services/analytics-reporting/internal/: doc.go
services/camera-calibration/: README.md  openapi.yaml
services/camera-calibration/cmd/: main.go
services/camera-calibration/internal/domain/: calibration.go  camera.go  domain_test.go  errors.go  ids.go  lens_profile.go  role.go
services/camera-calibration/internal/httpapi/: auth.go  dto.go  handlers.go  httpapi_test.go  respond.go  router.go
services/camera-calibration/internal/memstore/: cameras.go  memstore_test.go  profiles.go
services/camera-calibration/internal/security/: jwt.go  security_test.go
services/camera-calibration/internal/service/: calibration.go  camera.go  ports.go  service.go  service_test.go
services/identity-access/: README.md  openapi.yaml
services/identity-access/cmd/: main.go
services/identity-access/internal/: doc.go
services/identity-access/internal/domain/: consent.go  consent_test.go  errors.go  organization.go  organization_test.go  role.go  role_test.go  user.go  user_test.go
services/identity-access/internal/httpapi/: auth.go  dto.go  handlers.go  httpapi_extra_test.go  httpapi_test.go  respond.go  router.go
services/identity-access/internal/memstore/: consents.go  memstore_test.go  organizations.go  users.go
services/identity-access/internal/security/: bcrypt.go  jwt.go  security_test.go
services/identity-access/internal/service/: consent.go  organization.go  ports.go  service.go  service_extra_test.go  user.go  (+1 more)
services/match-tournament/: README.md  openapi.yaml
services/match-tournament/cmd/: main.go
services/match-tournament/internal/: doc.go
services/media-ingest-gateway/: README.md  openapi.yaml
services/media-ingest-gateway/cmd/: main.go
services/observability/: logging.go  logging_test.go  metrics.go  metrics_test.go  observability.go  tracing.go  tracing_test.go
services/review-orchestration/: README.md  openapi.yaml
services/review-orchestration/cmd/: main.go
services/review-orchestration/internal/: doc.go
(+61 files in other folders)
