[project]
name = "cricket-drs-ml-pipeline"
version = "0.1.0"
description = "CV/ML pipeline: ball tracking, edge detection, LBW engine, run-out detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
# Sibling tests/ dirs share the test_placeholder.py filename with no
# __init__.py (hyphenated package dirs like ball-tracking/ can't carry
# one), which mypy can't disambiguate into unique module names the way
# pytest's importlib import mode can (see addopts below). Type-checking
# is scoped to source packages; test files are exercised by pytest.
exclude = "^[^/]+/tests/"

[tool.pytest.ini_options]
# Each sub-package (ball-tracking, edge-detection, ...) has its own tests/
# directory with no __init__.py, and several share the filename
# test_placeholder.py. The default "prepend" import mode inserts each
# tests/ dir onto sys.path and collides on that shared module name;
# importlib mode imports each test file by its own path instead.
addopts = "--import-mode=importlib"
