[project]
name = "cricket-drs-ml-pipeline"
version = "0.1.0"
description = "CV/ML pipeline: ball tracking, edge detection, LBW engine, run-out detection"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.mypy]
# camera-calibration is the first sub-package to actually import numpy
# (the other five are still empty stubs), which surfaced a real
# incompatibility: numpy 2.5's own type stubs use PEP 695 `type` alias
# syntax, which mypy only parses under a 3.12+ target — even though this
# only affects reading numpy's stub file, not this project's own syntax.
# The installed dev venv is already 3.12 (see ml-pipeline/README.md's
# Setup section), so this just matches mypy's target to reality rather
# than lowering numpy's version to fit a stale 3.11 target.
python_version = "3.12"
disallow_untyped_defs = true
# Sibling tests/ dirs share the test_placeholder.py filename with no
# __init__.py (hyphenated package dirs like ball-tracking/ can't carry
# one), which mypy can't disambiguate into unique module names the way
# pytest's importlib import mode can (see addopts below). Type-checking
# is scoped to source packages; test files are exercised by pytest.
exclude = "^[^/]+/tests/"

[tool.pytest.ini_options]
# Each sub-package (ball-tracking, edge-detection, ...) has its own tests/
# directory with no __init__.py, and several share the filename
# test_placeholder.py. The default "prepend" import mode inserts each
# tests/ dir onto sys.path and collides on that shared module name;
# importlib mode imports each test file by its own path instead.
addopts = "--import-mode=importlib"
# None of the six sub-packages here are registered with setuptools'
# package discovery (this pyproject.toml has no [tool.setuptools.packages]
# config), so none of them are actually importable via a plain `pip
# install -e .`. camera-calibration is the first sub-package whose tests
# import its own package code (the other five's test_placeholder.py files
# don't), so it's the first to need this — adding its source dir directly
# to sys.path for the test session, rather than reworking package
# discovery for all six at once.
pythonpath = ["camera-calibration"]
